borsh-derive-internal/src/snapshots/borsh_derive_internal__attribute_helpers__tests__bounds_parsing1.snap
---
source: borsh-derive-internal/src/attribute_helpers.rs
expression: debug_print_bounds(ser)
---
K : Hash + Eq + Ord
V : Ord

