borsh-derive-internal/src/snapshots/borsh_derive_internal__attribute_helpers__tests__bounds_parsing_error.snap
---
source: borsh-derive-internal/src/attribute_helpers.rs
expression: err
---
Error(
    "malformed bound attribute, expected `bound(serialize = ..., deserialize = ...)`",
)
