borsh-derive-internal/src/snapshots/borsh_derive_internal__attribute_helpers__tests__bounds_parsing_error3.snap
---
source: borsh-derive-internal/src/attribute_helpers.rs
expression: err
---
Error(
    "expected borsh bound attribute to be a string: `deserialize = \"...\"`",
)
