borsh-derive-internal/src/snapshots/borsh_derive_internal__attribute_helpers__tests__check_use_borsh_invalid_on_whole_struct.snap
---
source: borsh-derive-internal/src/attribute_helpers.rs
expression: actual.unwrap_err().to_token_stream().to_string()
---
:: core :: compile_error ! { "`use_discriminant` is the only supported attribute for `borsh`" }
